# MMM-Sample

./: CMakeLists.txt  README.md  run.sh
Source/: ArrangementView.cpp  ArrangementView.h  AudioEngine.cpp  AudioEngine.h  BeatSlicerComponent.cpp  BeatSlicerComponent.h  Main.cpp  MainComponent.cpp  MainComponent.h  Sample.cpp  Sample.h  Track.cpp  Track.h  TrackView.cpp  TrackView.h  WarpCurve.cpp  WarpCurve.h  WarpCurveEditor.cpp  WarpCurveEditor.h  WarpPanel.cpp  WarpPanel.h  WaveformComponent.cpp  WaveformComponent.h
